# msp

./: .gitignore  .pnp.cjs  .yarnrc  .yarnrc.yml  ARCHITECTURE.md  CONTEXT.md  END_TO_END_FLOW.md  QUICK_START.md  SECURITY_APPRAISAL.md  SECURITY_ARCHITECTURE.md  msp_ws.code-workspace  package.json  vitest.config.ts
docs/: IDENTIFIER_GOVERNANCE_ONE_PAGER.md  README.md
module-federation-vite/: package.json  pnpm-lock.yaml  tsconfig.json
msp_actorwork/: .yarnrc.yml  package.json  (+8 more)
msp_tech_data/: Cargo.toml  README.md  docker-compose.yml  dockerfile  rsbuild.sh
msp_tech_data/api_examples/query_data/: query_data_account_person _orders_items_products.json  query_data_account_person.json  readme.txt
msp_tech_data/api_examples/send_data/: readme.txt  send_data_account_person _orders_items_products.json  send_data_account_person.json
msp_tech_data/config/: default.toml
msp_tech_data/docs/: transaction_timestamp_read_semantics.md
msp_tech_data/src/: lib.rs  main.rs
msp_tech_data/src/api/: graph.rs  mod.rs
msp_tech_data/src/config/: mod.rs
msp_tech_data/src/db/: business_keys.rs  db_client.rs  graph_lock.rs  graph_query.rs  graph_setup.rs  graph_transaction.rs  graph_upsert.rs  maps.rs  mod.rs  query.rs  repository.rs  setup.rs  transactions.rs
msp_tech_data/src/error/: mod.rs
msp_tech_data/src/model/: edge.rs  graph_elements.rs  mod.rs  query.rs  transaction.rs  update.rs  vertex.rs
msp_tech_data/src/util/: mod.rs
msp_tech_data/tests/: api_tests.rs  db_tests.rs.tmpTxt  integration_tests.rs
msp_tech_data/tests/common/: fixtures.rs  mod.rs
(+1076 files in other folders)
