[package]
name = "docgraph"
version = "0.1.0"
edition = "2024"
authors = ["DocGraph Team"]
description = "A document graph database API"
license = "MIT"

[dependencies]
# Web framework and API
poem = { version ="3.1.7", features = ["test"] }
poem-openapi = { version = "5.1.8", features = ["swagger-ui"] }

# Async runtime
tokio = { version = "1.44.1", features = ["full"] }

# Database
deadpool-postgres = "0.14.1"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }

# Serialization & data handling
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Utility crates
uuid = { version = "1.3", features = ["v4", "v7", "serde", "std"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
config = "0.15.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.97"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13.1"
rstest = "0.25.0"
serde_test = "1.0"
test-log = "0.2"
reqwest = { version = "0.12.15", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
